# face_checkin

./: .pre-commit-config.yaml  FRAPPE_CLOUD_SETUP.md  INSTALL.md  ONNX_SETUP.md  PRODUCTION.md  README.md  frappe_cloud_requirements.txt  license.txt  pyproject.toml  requirements.txt  setup_frappe_cloud.py  test_api.py  test_multi_image.py  test_projects.py
face_checkin/: commands.py  hooks.py  install.py  modules.txt
face_checkin/api/: debug_helper.py  face_api.py  simple_face_api.py
face_checkin/face_store/embeddings/: HR-EMP-00001.npy  HR-EMP-00002.npy  HR-EMP-00003.npy
face_checkin/fixtures/: sample_project.py
face_checkin/public/: manifest.json  sw.js
face_checkin/public/css/: checkin.css
face_checkin/public/js/: pwa-installer.js  sw.js
face_checkin/utils/: face_recognition_mp.py  face_recognition_simple.py  onnx_face_recognition.py
face_checkin/www/: checkin.html  employee_images.html  multi_image_upload.html  offline.html  setup.html  setup.py  simple_checkin.html  simple_checkin.py  simple_employee_images.html  simple_employee_images.py
